# xplat_sdl3

./: .clang-format  .gitignore  ATTRIBUTION.md  CMakeLists.txt  README.md  TODO.md
headers/forge/: content.h  game.h
headers/forge/support/: sdl_support.h
libs/bmf_reader/: CMakeLists.txt
libs/bmf_reader/headers/bmf_reader/: bmf_reader.h
libs/bmf_reader/src/: bmf_reader.cpp
libs/forge/: CMakeLists.txt
libs/forge/headers/forge/: audio_manager.h  content.h  debug_overlay.h  game.h
libs/forge/headers/forge/support/: sdl_support.h  stb_support.h
libs/forge/src/: audio_manager.cpp  content.cpp  debug_overlay.cpp  game.cpp  point.cpp
libs/forge/src/support/: sdl_support.cpp  stb_support.cpp
libs/forge/tests/: test_color.cpp  test_example.cpp  test_point.cpp
src/: Info.plist.in  bubble_game.cpp  bubble_game.h  iosLaunchScreen.storyboard  main.cpp
src/forge/: game.cpp
src/forge/support/: sdl_support.cpp  stb_support.cpp
